# llm_planning

./: .gitignore  README.md  environment.yaml  pyproject.toml  sweep.yaml  test_llama
data/: new_plans.json  new_plans_with_args.json  plans.json  strl_robotics.csv
language_table/: Dataset.ipynb  Experiments with data.ipynb
llm_planning/: run.py
llm_planning/datasets/: __init__.py  base_dataset.py  strl_robotics.py
llm_planning/envs/: base_env.py
llm_planning/gen_methods/: autoregressive.py  autoregressive_action.py  base_gen.py  base_gen_method.py  full.py  saycan.py
llm_planning/infrastructure/: config.py  logger.py
llm_planning/metrics/: base_metric.py  lcs.py
llm_planning/models/: base_model.py  llama_7b.py  minigpt4 (1).ipynb  minigpt4.py
llm_planning/processors/: base_processor.py  strl_processor.py  strl_processor_no_numerating.py
prompts/: system_prompt.json
