[tool.poetry]
name = "llm-planning"
version = "0.1.0"
description = ""
authors = ["yessense <akorchemnyj@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_planning"}]

[tool.poetry.dependencies]
python = "^3.8"
wandb = "^0.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
