[tool.poetry]
name = "llm-planning"
version = "0.1.0"
description = ""
authors = ["yessense <akorchemnyj@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_planning"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
transformers = ">=4.28.0,<4.29.0"
wandb = "^0.15.5"
accelerate = "^0.21.0"
sentencepiece = "^0.1.99"
bitsandbytes = "^0.40.2"
scipy = "1.10"
hydra-core = "^1.3.2"
sentence-transformers = "^2.2.2"
gdown = "^4.7.1"
pandas = "^2.0.3"
iopath = "0.1.10"
timm = "0.6.13"
opencv-python = "4.7.0.72"
webdataset = "0.2.48"
decord = "0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
